--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -131,7 +131,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -143,7 +143,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -155,7 +155,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -180,7 +180,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/prf.png" alt="img">
+          <img src="./prf.png" alt="img">
         </div>
       </div>
       <div class="col-right">
