--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>K</span>azi <span>A</span>rifur <span>R</span>arhman</h1>
+            <h1><span>M</span>ojammel <span>H</span>ossain <span>U</span>doy</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -42,7 +42,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
-        <h1>Arifur Rahman <span></span></h1>
+        <h1>Mojammel Hossain Udoy <span></span></h1>
       </div>
     </div>
   </section>
@@ -180,7 +180,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="prf.png" alt="img">
+          <img src="mozammel2.png" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -216,7 +216,7 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>wajahat.webcog@gmail.com</h2>
+            <h2>mojammelhossainudoy@gmail.com</h2>
             <h2>abcd@gmail.com</h2>
           </div>
         </div>
@@ -236,7 +236,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>K</span>azi <span>A</span>rifur <span>R</span>ahman</h1>
+        <h1><span>m</span>mojammel</h1>
       </div>
       <h2>Connect with me</h2>
       <div class="social-icon">
@@ -253,7 +253,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
         </div>
       </div>
-      <p>Copyright © 2020 Arifur. All rights reserved</p>
+      <p>Copyright © 2020 mojammel. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
