--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="mozammel1.png" alt="img">
           </div>
         </div>
       </div>
