--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="mozammel1.png" alt="img">
+            <img src="img-1.png" alt="img">
           </div>
         </div>
       </div>
@@ -209,7 +209,7 @@
           <div class="contact-info">
             <h1>Phone</h1>
             <h2>+92 300 835 5143</h2>
-            <h2>+1 234 123 1234</h2>
+            <h2whatsapp-01609239777/h2>
           </div>
         </div>
         <div class="contact-item">
@@ -236,7 +236,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>m</span>mojammel</h1>
+        <h1><span>m</span>ojammel</h1>
       </div>
       <h2>Connect with me</h2>
       <div class="social-icon">
